Corrects section text padding on small screens

--- a/src/components/Sections/HomeBio/HomeBio.module.css
+++ b/src/components/Sections/HomeBio/HomeBio.module.css
@@ -76,4 +76,8 @@
     width: 100%;
     border-radius: 0;
   }
+
+  .bio-text-container {
+    padding: 0 30px;
+  }
 }
